# kote

./: .gitignore  Cargo.toml  Lat7-Fixed14.psf  Makefile  README  config.rs  debug.mk  font.psf  grub.cfg  rust-toolchain  rust-toolchain.toml  rustfmt.toml  toolchain.mk
.cargo/: config.toml
cfg/: bochs.cfg  grub.cfg
kernel/: Cargo.toml  console.rs  consts.rs  debug.rs  dwarf.rs  elf.rs  main.rs  multiboot.rs  panic.rs  printk.rs  process.rs  sched.rs  serial.rs  small_vec.rs  spinlock.rs  syscalls.rs  types.rs  units.rs  utils.rs
kernel/arch/x64/: asm.rs  backtrace.rs  interrupts.rs  interrupts.s  io.rs  link.ld  mmu.rs  mod.rs  start.s  syscall.s  target.json  uart.rs  x64-kernel.json
kernel/arch/x64/interrupts/: exceptions.rs  handlers.rs  idt.rs  irq.rs  mod.rs  pic.rs  rtc.rs
kernel/arch/x64/mm/: mmu.rs  mod.rs
kernel/bootloader/: mod.rs  multiboot.rs
kernel/mm/: addr.rs  mod.rs  pg_alloc.rs  types.rs
userspace/breakpoint/: Cargo.toml  main.rs
userspace/hello_world/: Cargo.toml  main.rs
userspace/input/: Cargo.toml  main.rs
userspace/loop/: Cargo.toml  main.rs
userspace/ulib/: Cargo.toml  lib.rs  print.rs
