# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[workspace]
members = ["kernel", "userspace/*"]

[workspace.package]
authors = ["Ruslan Akbashev <ruslashev@gmail.com>"]
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"

[profile.dev]
opt-level = 1

[profile.release]
overflow-checks = true
