# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "breakpoint"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "breakpoint"
path = "main.rs"
